--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage--ghpages": "https://JeromeTrottier.github.io/portfolio-jerome-trottier",
+  "homepage-gh": "https://JeromeTrottier.github.io/portfolio-jerome-trottier",
   "name": "portfolio-jerome-trottier",
   "version": "0.1.0",
   "private": true,
