--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
     "install": "^0.13.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "node-sass": "^7.0.1",
     "npm": "^8.5.0",
     "react": "^17.0.2",
